LittleDuckParser.java
// Generated from LittleDuck.g4 by ANTLR 4.13.1

	import interventions.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LittleDuckParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, ID=30, STRING=31, NEWLINE=32, 
		WHITESPACE=33, INT=34, FLOAT=35;
	public static final int
		RULE_programa = 0, RULE_dec_v = 1, RULE_dec_f = 2, RULE_vars = 3, RULE_vars1 = 4, 
		RULE_vars2 = 5, RULE_list_ids = 6, RULE_list_ids1 = 7, RULE_type = 8, 
		RULE_body = 9, RULE_body1 = 10, RULE_statement = 11, RULE_print = 12, 
		RULE_print1 = 13, RULE_print_opciones = 14, RULE_print2 = 15, RULE_cycle = 16, 
		RULE_condition = 17, RULE_else_if = 18, RULE_assign = 19, RULE_expresion = 20, 
		RULE_expresion1 = 21, RULE_signos = 22, RULE_exp = 23, RULE_exp1 = 24, 
		RULE_exp_signos = 25, RULE_termino = 26, RULE_termino1 = 27, RULE_term_signos = 28, 
		RULE_factor = 29, RULE_factor1 = 30, RULE_factor2 = 31, RULE_cte = 32, 
		RULE_funcs = 33, RULE_funcs1 = 34, RULE_funcs_var = 35, RULE_funcs2 = 36, 
		RULE_f_call = 37, RULE_f_call1 = 38, RULE_call_list = 39;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "dec_v", "dec_f", "vars", "vars1", "vars2", "list_ids", "list_ids1", 
			"type", "body", "body1", "statement", "print", "print1", "print_opciones", 
			"print2", "cycle", "condition", "else_if", "assign", "expresion", "expresion1", 
			"signos", "exp", "exp1", "exp_signos", "termino", "termino1", "term_signos", 
			"factor", "factor1", "factor2", "cte", "funcs", "funcs1", "funcs_var", 
			"funcs2", "f_call", "f_call1", "call_list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program '", "';'", "'main'", "'end'", "'var '", "':'", "','", 
			"'int'", "'float'", "'{'", "'}'", "'print('", "')'", "'do'", "'while'", 
			"'('", "'if('", "'else'", "'='", "'<'", "'>'", "'!='", "'+'", "'-'", 
			"'*'", "'/'", "'void '", "'['", "'];'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "ID", "STRING", "NEWLINE", "WHITESPACE", 
			"INT", "FLOAT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LittleDuck.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		public static Middleman m = new Middleman(); 

	public LittleDuckParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public Program p = new Program(m);
		public Token ID;
		public TerminalNode ID() { return getToken(LittleDuckParser.ID, 0); }
		public Dec_vContext dec_v() {
			return getRuleContext(Dec_vContext.class,0);
		}
		public Dec_fContext dec_f() {
			return getRuleContext(Dec_fContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__0);
			setState(81);
			((ProgramaContext)_localctx).ID = match(ID);
			((ProgramaContext)getInvokingContext(0)).p.setName((((ProgramaContext)_localctx).ID!=null?((ProgramaContext)_localctx).ID.getText():null));
			setState(83);
			match(T__1);
			setState(84);
			dec_v();
			setState(85);
			dec_f();
			setState(86);
			match(T__2);
			setState(87);
			body();
			setState(88);
			match(T__3);
			m.cuads.add(new Cuadruplo("End"));
			((ProgramaContext)getInvokingContext(0)).p.writeToFile();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dec_vContext extends ParserRuleContext {
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public Dec_vContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_v; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).enterDec_v(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).exitDec_v(this);
		}
	}

	public final Dec_vContext dec_v() throws RecognitionException {
		Dec_vContext _localctx = new Dec_vContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dec_v);
		try {
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				vars();
				}
				break;
			case T__2:
			case T__26:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dec_fContext extends ParserRuleContext {
		public FuncsContext funcs() {
			return getRuleContext(FuncsContext.class,0);
		}
		public Dec_fContext dec_f() {
			return getRuleContext(Dec_fContext.class,0);
		}
		public Dec_fContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_f; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).enterDec_f(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).exitDec_f(this);
		}
	}

	public final Dec_fContext dec_f() throws RecognitionException {
		Dec_fContext _localctx = new Dec_fContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dec_f);
		try {
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__26:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				funcs();
				setState(97);
				dec_f();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarsContext extends ParserRuleContext {
		public ArrayList<String> l_vars = new ArrayList<String>();
		public Vars1Context vars1() {
			return getRuleContext(Vars1Context.class,0);
		}
		public VarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).enterVars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).exitVars(this);
		}
	}

	public final VarsContext vars() throws RecognitionException {
		VarsContext _localctx = new VarsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vars);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__4);
			setState(103);
			vars1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Vars1Context extends ParserRuleContext {
		public TypeContext type;
		public List_idsContext list_ids() {
			return getRuleContext(List_idsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Vars2Context vars2() {
			return getRuleContext(Vars2Context.class,0);
		}
		public Vars1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).enterVars1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).exitVars1(this);
		}
	}

	public final Vars1Context vars1() throws RecognitionException {
		Vars1Context _localctx = new Vars1Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_vars1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			list_ids();
			setState(106);
			match(T__5);
			setState(107);
			((Vars1Context)_localctx).type = type();
			((ProgramaContext)getInvokingContext(0)).p.decVars(((VarsContext)getInvokingContext(3)).l_vars, (((Vars1Context)_localctx).type!=null?_input.getText(((Vars1Context)_localctx).type.start,((Vars1Context)_localctx).type.stop):null), _localctx.getStart().getLine());
			setState(109);
			match(T__1);
			setState(110);
			vars2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Vars2Context extends ParserRuleContext {
		public Vars1Context vars1() {
			return getRuleContext(Vars1Context.class,0);
		}
		public Vars2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).enterVars2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).exitVars2(this);
		}
	}

	public final Vars2Context vars2() throws RecognitionException {
		Vars2Context _localctx = new Vars2Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_vars2);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				vars1();
				}
				break;
			case T__2:
			case T__9:
			case T__26:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class List_idsContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode ID() { return getToken(LittleDuckParser.ID, 0); }
		public List_ids1Context list_ids1() {
			return getRuleContext(List_ids1Context.class,0);
		}
		public List_idsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_ids; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).enterList_ids(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).exitList_ids(this);
		}
	}

	public final List_idsContext list_ids() throws RecognitionException {
		List_idsContext _localctx = new List_idsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_list_ids);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			((List_idsContext)_localctx).ID = match(ID);
			((VarsContext)getInvokingContext(3)).l_vars.add((((List_idsContext)_localctx).ID!=null?((List_idsContext)_localctx).ID.getText():null));
			setState(118);
			list_ids1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class List_ids1Context extends ParserRuleContext {
		public List_idsContext list_ids() {
			return getRuleContext(List_idsContext.class,0);
		}
		public List_ids1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_ids1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).enterList_ids1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).exitList_ids1(this);
		}
	}

	public final List_ids1Context list_ids1() throws RecognitionException {
		List_ids1Context _localctx = new List_ids1Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_list_ids1);
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				match(T__6);
				setState(121);
				list_ids();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_la = _input.LA(1);
			if ( !(_la==T__7 || _la==T__8) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public Body1Context body1() {
			return getRuleContext(Body1Context.class,0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).exitBody(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(T__9);
			setState(128);
			body1();
			setState(129);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Body1Context extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public Body1Context body1() {
			return getRuleContext(Body1Context.class,0);
		}
		public Body1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).enterBody1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).exitBody1(this);
		}
	}

	public final Body1Context body1() throws RecognitionException {
		Body1Context _localctx = new Body1Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_body1);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
			case T__13:
			case T__16:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				statement();
				setState(132);
				body1();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public CycleContext cycle() {
			return getRuleContext(CycleContext.class,0);
		}
		public F_callContext f_call() {
			return getRuleContext(F_callContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_statement);
		try {
			setState(142);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				assign();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				condition();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(139);
				cycle();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(140);
				f_call();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(141);
				print();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrintContext extends ParserRuleContext {
		public Print1Context print1() {
			return getRuleContext(Print1Context.class,0);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).exitPrint(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_print);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(T__11);
			setState(145);
			print1();
			setState(146);
			match(T__12);
			setState(147);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Print1Context extends ParserRuleContext {
		public Print_opcionesContext print_opciones() {
			return getRuleContext(Print_opcionesContext.class,0);
		}
		public Print2Context print2() {
			return getRuleContext(Print2Context.class,0);
		}
		public Print1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).enterPrint1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).exitPrint1(this);
		}
	}

	public final Print1Context print1() throws RecognitionException {
		Print1Context _localctx = new Print1Context(_ctx, getState());
		enterRule(_localctx, 26, RULE_print1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			print_opciones();
			setState(150);
			print2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Print_opcionesContext extends ParserRuleContext {
		public Token STRING;
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode STRING() { return getToken(LittleDuckParser.STRING, 0); }
		public Print_opcionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print_opciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).enterPrint_opciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).exitPrint_opciones(this);
		}
	}

	public final Print_opcionesContext print_opciones() throws RecognitionException {
		Print_opcionesContext _localctx = new Print_opcionesContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_print_opciones);
		try {
			setState(157);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__15:
			case T__22:
			case T__23:
			case ID:
			case INT:
			case FLOAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				expresion();
				((ProgramaContext)getInvokingContext(0)).p.pushPrintExpresion();
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				((Print_opcionesContext)_localctx).STRING = match(STRING);
				((ProgramaContext)getInvokingContext(0)).p.pushPrintString((((Print_opcionesContext)_localctx).STRING!=null?((Print_opcionesContext)_localctx).STRING.getText():null));
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Print2Context extends ParserRuleContext {
		public Print1Context print1() {
			return getRuleContext(Print1Context.class,0);
		}
		public Print2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).enterPrint2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).exitPrint2(this);
		}
	}

	public final Print2Context print2() throws RecognitionException {
		Print2Context _localctx = new Print2Context(_ctx, getState());
		enterRule(_localctx, 30, RULE_print2);
		try {
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(159);
				match(T__6);
				setState(160);
				print1();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CycleContext extends ParserRuleContext {
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public CycleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cycle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).enterCycle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckListener ) ((LittleDuckListener)listener).exitCycle(this);
		}
	}
